Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignBoolObjBoolObj.quorum
Boolean b
b:SetValue(true)
Boolean bool = cast(Boolean, b)
boolean x = bool:GetValue()
output x