Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignIntObjBoolObj.quorum
Boolean bool
bool:setValue(true)
Integer i = bool